fix: changed overflow from scroll to hidden in watchlist component

--- a/src/components/Watchlist/Watchlist.module.css
+++ b/src/components/Watchlist/Watchlist.module.css
@@ -83,8 +83,7 @@
 
 .watchlistSize {
     height: 100%;
-    overflow-y: scroll;
     padding: 0;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
